added user api and user resource
