# public/docs/openapi.yaml
@@ -5,7 +5,7 @@ info:
     version: 1.0.0
 servers:
     -
-        url: 'http://localhost'
+        url: 'http://127.0.0.1:8000'
 paths:
     /api/user:
         get:
@@ -163,7 +163,7 @@ paths:
     /api/dashboard:
         get:
             summary: Dashboard
-            description: "The API endpoint for dashboard\nRoute: /admin/dashboard"
+            description: "The API endpoint for dashboard\nRoute: /dashboard"
             parameters:
                 -
                     in: header
@@ -199,3 +199,53 @@ paths:
                                     error: { type: string, example: 'Invalid token' }
             tags:
                 - Endpoints
+    /api/users:
+        get:
+            summary: 'User API'
+            description: "The API endpoint for users by pagination\nRoute: /dashboard"
+            parameters:
+                -
+                    in: header
+                    name: Content-Type
+                    description: ''
+                    example: application/json
+                    schema:
+                        type: string
+                -
+                    in: header
+                    name: Accept
+                    description: ''
+                    example: application/json
+                    schema:
+                        type: string
+                -
+                    in: header
+                    name: Authorization
+                    description: ''
+                    example: 'Bearer {{token}}'
+                    schema:
+                        type: string
+            responses:
+                401:
+                    description: ''
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                example:
+                                    error: 'Invalid token'
+                                properties:
+                                    error: { type: string, example: 'Invalid token' }
+            tags:
+                - Endpoints
+            requestBody:
+                required: false
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                page:
+                                    type: integer
+                                    description: 'Page number for pagination.'
+                                    example: 1
